--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,9 +36,9 @@ comments: true
     <div class="share">
       {% include sns-share.html %}
     </div>
-<!--     <div class="comment">
-      {% include comments.html %}
-    </div> -->
+    <div class="comment">
+      {% include comment_gitment.html %}
+    </div>
   </div>
   <div class="column one-fourth">
     {% include sidebar-search.html %}
