--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,8 @@
 body {
 	/*font-family:  "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; 
 	line-height: 1.2em; */
-	background-color: #f3f3f3;
-	background-image: url(../images/patterns/soft_wallpaper.png);
+	background-color: #FDFDFD;
+	/*background-image: url(../images/patterns/soft_wallpaper.png);*/
 	background-repeat: repeat;
 	background-attachment: fixed;
 	background-position: 0px 0px; 
