--- a/_includes/header.html
+++ b/_includes/header.html
@@ -92,6 +92,10 @@
     <header class="site-header">
         <div class="container">
             <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-mark-github"></span> {{ site.title }}</a></h1>
+            <span class="meta-info mobile-hidden" style="margin-left: 50px;font-size: 12px;color: #FC3A52">
+                <span class="octicon octicon-location"></span>
+                {{ site.location }}
+            </span>
             <button class="collapsed mobile-visible" type="button" onclick="toggleMenu();">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
