--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15}}">
+<!-- <section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15}}">
     <div class="container">
         <div class="collection-title">
             <h1 class="collection-header">{{ page.title }}</h1>
@@ -14,7 +14,7 @@ layout: default
             {% endif %}
         </div>
     </div>
-</section>
+</section> -->
 <!-- / .banner -->
  <section class="container content">
         <div class="columns">
