--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -1,7 +1,7 @@
 .home .banner,
 .home .site-header {
     /*background: #4183c4;*/
-    background:#0D0D0D;
+    background:#0E2431;
     color: #fff
 }
 
@@ -21,7 +21,8 @@
 }
 
 .home .site-header .site-header-nav-item {
-    color: rgba(255, 255, 255, .5)
+    /*color: rgba(255, 255, 255, .5)*/
+    color: #FC3A52;
 }
 
 .home .site-header .site-header-nav-item:hover {
